[package]
name = "abl-exorcist-assembler"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[features]
default = ["std"]
std = ["dep:flate2", "dep:lzzzz", "dep:zstd"]

[dependencies]
flate2 = { version = "1.1", optional = true }
lzzzz = { version = "2.0", optional = true }
zstd = { version = "0.13", optional = true }
